--- a/Untitled.fxml
+++ b/Untitled.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="647.0" prefWidth="416.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="647.0" prefWidth="416.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <content>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="644.0" prefWidth="414.0">
          <children>
@@ -14,6 +14,8 @@
             <Button layoutX="40.0" layoutY="227.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="334.0" text="Button" />
             <Button layoutX="40.0" layoutY="286.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="334.0" text="Button" />
             <Button layoutX="41.0" layoutY="347.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="334.0" text="Button" />
+            <Button layoutX="40.0" layoutY="409.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="334.0" text="Button" />
+            <Button layoutX="41.0" layoutY="474.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="334.0" text="Button" />
          </children></AnchorPane>
   </content>
 </ScrollPane>
